I finished most of it but i need to: fix the svg, add the interativity with some icons, adjust gregs name to align with the photo horizontally.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,19 +1,41 @@
+html {
+    font-family: "Figtree Medium";
+}
+
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
 body {
     background-color: hsl(47, 88%, 63%);
 }
+.bubble {
+    background-color: hsl(47, 88%, 63%);
+    padding: 10px;
+    max-width: 65px;
+    border-radius: .3em;
+}
+
+p {
+    font-family: "Figtree Light";
+}
+
+h2 {
+    font-family: "Figtree ExtraBold";
+}
+#Greg {
+    float: left;
+    width: 10%;
+}
 #card {
-    display: flex;
-    flex-direction: column;
+
     background-color: white;
     max-width: 25rem;
     padding: 1.5rem;
-    justify-content: center;
-    align-items: center;
+
     border-style: solid;
     border-radius: 2rem;
     border-width: .1rem;
     border-color: black;
     box-shadow: black .5rem .5rem 0rem;
+    margin: 20rem auto auto auto;
+
 }
